# rust-pipe

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: op_trim.rs
src/: condition.rs  config.rs  err.rs  fmt.rs  help.rs  input.rs  lib.rs  main.rs  op.rs  output.rs  pipe.rs  print.rs  sink.rs
src/op/: mod.rs  replace.rs  slice.rs  trim.rs
src/parse/: input.rs  mod.rs  op.rs  output.rs
src/parse/args/: condition.rs  config.rs  input.rs  mod.rs  op.rs  output.rs
src/parse/token/: condition.rs  config.rs  input.rs  mod.rs  op.rs  output.rs
