[package]
name = "rust-pipe"
version = "0.2.0"
edition = "2024"
description = "A command-line string processing tool implemented in Rust that supports streaming processing."
authors = ["oyealex"]

[[bin]]
name = "rp"           # 最终生成的二进制文件名（无扩展名）
path = "src/main.rs"     # 可执行文件路径，如果不指定则自动定位src/rp.rs或src\bin\rp\main.rs

[dependencies]
itertools = "0.14.0" # 迭代器增强
nom = "8.0.0" # 模式解析
nom-language = "0.1.0" # 模式解析错误信息辅助
thiserror = "2.0.17" # 错误码
ordered-float = "5.1.0" # 浮点数排序
unicase = "2.9.0" # 忽略大小写
rand = "0.9.2" # 随机数
rt-format = "0.3.1" # 运行时字符串格式化
regex = "1.12.2" # 正则
cmd-help = { path = "./cmd_help" } # doc生成帮助

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4.1" # windows剪切板

[build-dependencies]
time = { version = "0.3.45", features = ["formatting", "local-offset", "macros"] } # 处理时间

[profile.release]
opt-level = 3       # 或 "s"（优化大小），3（优化速度）
lto = true          # 启用链接时优化（Link Time Optimization）
codegen-units = 1   # 减少代码生成单元以提升优化效果（但会减慢编译）
panic = "abort"     # 减小体积，出错直接 abort 而非 unwind
strip = true        # （Rust 1.58+）自动剥离调试符号
